# algo_lb1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  Отчет Алго_лб1.docx
src/: array_utils.cpp  main.cpp  matrix_utils.cpp  matrix_utils.h  student_utils.cpp
